[package]
name = "vulkan_rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ash = "0.37.2"
glam = "0.24.0"
gpu-allocator = "0.22.0"
memoffset = "0.8.0"
num = "0.4.0"
shaderc = "0.8.2"
winit = "0.27.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }

[[bin]]
name = "main"
path = "src/learning/main.rs"
